@@ -7,6 +7,8 @@ Version 1.11.10+dev:
    * Updated translations: 
  * Miscellaneous and bug fixes:
    * Units can no longer be moved in linger mode (bug #21450).
+   * Labels are now removed when shroud/fog is removed, rather than waiting
+     for a new turn (bug #21434).
 
 
 Version 1.11.10:
